--- a/tools/ConvertAndCopyCosmosItems/appsettings.json
+++ b/tools/ConvertAndCopyCosmosItems/appsettings.json
@@ -15,7 +15,7 @@
       "CosmosDbDatabase": "[Set your cosmos db database here]",
       "CosmosDbContainer": "items",
       "CosmosDbContainerDissolvable": "dissolvableitems",
-      "LegacyPartitions": true
+      "LegacyPartitions": false
     },
     "ConvertDestination": {
       "AggregateEventCosmosDbContainer": "events",
@@ -26,7 +26,7 @@
       "CosmosDbDatabase": "[Set your cosmos db database here]",
       "CosmosDbContainer": "items",
       "CosmosDbContainerDissolvable": "dissolvableitems",
-      "LegacyPartitions": true
+      "LegacyPartitions": false
     },
     "MemoryCache": {
       "SingleProjection": {
