--- a/src/Sekiban.Infrastructure.Dynamo/Sekiban.Infrastructure.Dynamo.csproj
+++ b/src/Sekiban.Infrastructure.Dynamo/Sekiban.Infrastructure.Dynamo.csproj
@@ -4,13 +4,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>Sekiban.Infrastructure.Dynamo</PackageId>
-        <Version>0.15.0</Version>
+        <Version>0.15.1</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Dynamo Infrastructure</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.15.0</PackageVersion>
-        <Description>Change Command Handler Signiture</Description>
+        <PackageVersion>0.15.1</PackageVersion>
+        <Description>Update packages to newest stable</Description>
         <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
         <LangVersion>preview</LangVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -20,8 +20,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.200.14"/>
-        <PackageReference Include="AWSSDK.S3" Version="3.7.201.11"/>
+        <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.203.10"/>
+        <PackageReference Include="AWSSDK.S3" Version="3.7.205.18"/>
         <PackageReference Include="SharpZipLib" Version="1.4.2"/>
         <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
