--- a/src/Sekiban.Testing/Sekiban.Testing.csproj
+++ b/src/Sekiban.Testing/Sekiban.Testing.csproj
@@ -5,13 +5,13 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Testing</PackageId>
-        <Version>0.15.0</Version>
+        <Version>0.15.1</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Testing</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.15.0</PackageVersion>
-        <Description>Change Command Handler Signiture</Description>
+        <PackageVersion>0.15.1</PackageVersion>
+        <Description>Update packages to newest stable</Description>
         <AssemblyName>Sekiban.Testing</AssemblyName>
         <RootNamespace>Sekiban.Testing</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -22,10 +22,10 @@
     <ItemGroup>
         <PackageReference Include="MartinCostello.Logging.XUnit" Version="0.3.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0"/>
-        <PackageReference Include="xunit.assert" Version="2.5.0"/>
-        <PackageReference Include="xunit.extensibility.core" Version="2.5.0"/>
+        <PackageReference Include="xunit.assert" Version="2.5.3"/>
+        <PackageReference Include="xunit.extensibility.core" Version="2.5.3"/>
         <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
-        <PackageReference Include="xunit.extensibility.execution" Version="2.5.0"/>
+        <PackageReference Include="xunit.extensibility.execution" Version="2.5.3"/>
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
