--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 8.0.100-rc.2.23502.2
+        dotnet-version: 8.0.x
     - name: Setup .NET 7
       uses: actions/setup-dotnet@v1
       with:
@@ -73,7 +73,7 @@ jobs:
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 8.0.100-rc.2.23502.2
+        dotnet-version: 8.0.x
     - name: Setup .NET 7
       uses: actions/setup-dotnet@v1
       with:
@@ -128,7 +128,7 @@ jobs:
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 8.0.100-rc.2.23502.2
+        dotnet-version: 8.0.x
     - name: Setup .NET 7
       uses: actions/setup-dotnet@v1
       with:
@@ -187,7 +187,7 @@ jobs:
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 8.0.100-rc.2.23502.2
+        dotnet-version: 8.0.x
     - name: Setup .NET 7
       uses: actions/setup-dotnet@v1
       with:
@@ -239,7 +239,7 @@ jobs:
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 8.0.100-rc.2.23502.2
+        dotnet-version: 8.0.x
     - name: Setup .NET 7
       uses: actions/setup-dotnet@v1
       with:
@@ -291,7 +291,7 @@ jobs:
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 8.0.100-rc.2.23502.2
+        dotnet-version: 8.0.x
     - name: Setup .NET 7
       uses: actions/setup-dotnet@v1
       with:
@@ -343,7 +343,7 @@ jobs:
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 8.0.100-rc.2.23502.2
+        dotnet-version: 8.0.x
     - name: Setup .NET 7
       uses: actions/setup-dotnet@v1
       with:
