--- a/Tutorials/1.GetStarted/BookBorrowing.Domain/BookBorrowing.Domain.csproj
+++ b/Tutorials/1.GetStarted/BookBorrowing.Domain/BookBorrowing.Domain.csproj
@@ -1,13 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Sekiban.Core" Version="0.15.0" />
+        <PackageReference Include="Sekiban.Core" Version="0.15.3" />
     </ItemGroup>
 
 
