--- a/Tutorials/1.GetStarted/BookBorrowing.Web.Cosmos/BookBorrowing.Web.Cosmos.csproj
+++ b/Tutorials/1.GetStarted/BookBorrowing.Web.Cosmos/BookBorrowing.Web.Cosmos.csproj
@@ -1,17 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <InvariantGlobalization>true</InvariantGlobalization>
       <UserSecretsId>fc83fb78-484c-4a5c-9608-cbec05d03984</UserSecretsId>
+      <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
-        <PackageReference Include="Sekiban.Infrastructure.Cosmos" Version="0.15.0" />
-        <PackageReference Include="Sekiban.Web" Version="0.15.0" />
+        <PackageReference Include="Sekiban.Infrastructure.Cosmos" Version="0.15.3" />
+        <PackageReference Include="Sekiban.Web" Version="0.15.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
