--- a/internalUsages/FeatureCheck.Domain/FeatureCheck.Domain.csproj
+++ b/internalUsages/FeatureCheck.Domain/FeatureCheck.Domain.csproj
@@ -4,7 +4,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
-        <LangVersion>11</LangVersion>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
