Add Connection string

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -29,11 +29,9 @@ jobs:
     - name: Secret Settings
       run: |
         pushd ./test/Sekiban.Test.CosmosDb
-        dotnet user-secrets set "Sekiban:Default:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
         dotnet user-secrets set "Sekiban:Default:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-        dotnet user-secrets set "Sekiban:Default:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
+        dotnet user-secrets set "Sekiban:Default:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions"
@@ -81,11 +79,9 @@ jobs:
     - name: Secret Settings
       run: |
         pushd ./test/Sekiban.Test.CosmosDb
-        dotnet user-secrets set "Sekiban:Default:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
         dotnet user-secrets set "Sekiban:Default:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-        dotnet user-secrets set "Sekiban:Default:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
+        dotnet user-secrets set "Sekiban:Default:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions8"
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions8"
@@ -136,11 +132,9 @@ jobs:
     - name: Secret Settings
       run: |
         pushd ./test/Sekiban.Test.CosmosDb
-        dotnet user-secrets set "Sekiban:Default:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Default:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
         dotnet user-secrets set "Sekiban:Default:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
+        dotnet user-secrets set "Sekiban:Default:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions"
@@ -195,11 +189,10 @@ jobs:
     - name: Secret Settings
       run: |
         pushd ./test/Sekiban.Test.CosmosDb
-        dotnet user-secrets set "Sekiban:Default:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Default:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
         dotnet user-secrets set "Sekiban:Default:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
+        dotnet user-secrets set "Sekiban:Default:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
+        dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions"
@@ -247,11 +240,9 @@ jobs:
     - name: Secret Settings
       run: |
         pushd ./test/Sekiban.Test.CosmosDb
-        dotnet user-secrets set "Sekiban:Default:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Default:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
         dotnet user-secrets set "Sekiban:Default:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
+        dotnet user-secrets set "Sekiban:Default:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions8"
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions8"
@@ -299,11 +290,9 @@ jobs:
     - name: Secret Settings
       run: |
         pushd ./test/Sekiban.Test.CosmosDb
-        dotnet user-secrets set "Sekiban:Default:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Default:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
         dotnet user-secrets set "Sekiban:Default:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
+        dotnet user-secrets set "Sekiban:Default:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions"
@@ -351,11 +340,9 @@ jobs:
     - name: Secret Settings
       run: |
         pushd ./test/Sekiban.Test.CosmosDb
-        dotnet user-secrets set "Sekiban:Default:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Default:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
         dotnet user-secrets set "Sekiban:Default:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbEndPointUrl" "${{secrets.TEST_COSMOS_ENDPOINT}}"
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbAuthorizationKey" "${{secrets.TEST_COSMOS_SECRET}}"
+        dotnet user-secrets set "Sekiban:Default:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbConnectionString" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Secondary:BlobConnectionString" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "Sekiban:Default:CosmosDbDatabase" "GithubActions"
         dotnet user-secrets set "Sekiban:Secondary:CosmosDbDatabase" "GithubActions"
