--- a/internalUsages/FeatureCheck.WebApi/Properties/launchSettings.json
+++ b/internalUsages/FeatureCheck.WebApi/Properties/launchSettings.json
@@ -9,12 +9,22 @@
     }
   },
   "profiles": {
-    "CustomerWebApi": {
+    "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7224;http://localhost:5224",
+      "applicationUrl": "http://localhost:6011",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "https": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:8263;http://localhost:6011",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
