--- a/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Dynamo/BookBorrowing.Web.Dynamo.csproj
+++ b/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Dynamo/BookBorrowing.Web.Dynamo.csproj
@@ -9,10 +9,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
-        <PackageReference Include="Sekiban.Infrastructure.Dynamo" Version="0.15.3" />
-        <PackageReference Include="Sekiban.Web" Version="0.15.3" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
+        <PackageReference Include="Sekiban.Infrastructure.Dynamo" Version="0.15.4" />
+        <PackageReference Include="Sekiban.Web" Version="0.15.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BookBorrowing.Domain\BookBorrowing.Domain.csproj" />
     </ItemGroup>
 
 </Project>
