change appsettings item names

--- a/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Cosmos/appsettings.Development.json
+++ b/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Cosmos/appsettings.Development.json
@@ -7,14 +7,9 @@
   },
   "Sekiban": {
     "Default": {
-      "AggregateEventCosmosDbContainer": "events",
-      "AggregateEventCosmosDbContainerDissolvable": "dissolvableevents",
+      "CosmosDbConnectionString": "[Set your cosmos db connection string]",
       "BlobConnectionString": "[Set your blob connection string here. (not necessary for just running the sample)]",
-      "CosmosDbEndPointUrl": "[Set your CosmosDb endpoint url here.]",
-      "CosmosDbAuthorizationKey": "[Set your CosmosDb authorization key here.]",
-      "CosmosDbDatabase": "GetStartedDb",
-      "CosmosDbContainer": "items",
-      "CosmosDbContainerDissolvable": "dissolvableitems"
+      "CosmosDbDatabase": "GetStartedDb"
     }
   }
 }
