--- a/tools/ConvertAndCopyCosmosItems/appsettings.json
+++ b/tools/ConvertAndCopyCosmosItems/appsettings.json
@@ -7,25 +7,15 @@
   },
   "Sekiban": {
     "Default": {
-      "AggregateEventCosmosDbContainer": "events",
-      "AggregateEventCosmosDbContainerDissolvable": "dissolvableevents",
       "BlobConnectionString": "[your blob connection string]",
-      "CosmosDbEndPointUrl": "https://[YOUR COSMOS ENDPOINT URL].documents.azure.com:443/",
-      "CosmosDbAuthorizationKey": "[Set your cosmos db key here]",
+      "CosmosDbConnectionString": "[Set your cosmos db connection string here]",
       "CosmosDbDatabase": "[Set your cosmos db database here]",
-      "CosmosDbContainer": "items",
-      "CosmosDbContainerDissolvable": "dissolvableitems",
       "LegacyPartitions": false
     },
     "ConvertDestination": {
-      "AggregateEventCosmosDbContainer": "events",
-      "AggregateEventCosmosDbContainerDissolvable": "dissolvableevents",
       "BlobConnectionString": "[your blob connection string]",
-      "CosmosDbEndPointUrl": "https://[YOUR COSMOS ENDPOINT URL].documents.azure.com:443/",
-      "CosmosDbAuthorizationKey": "[Set your cosmos db key here]",
+      "CosmosDbConnectionString": "[Set your cosmos db connection string here]",
       "CosmosDbDatabase": "[Set your cosmos db database here]",
-      "CosmosDbContainer": "items",
-      "CosmosDbContainerDissolvable": "dissolvableitems",
       "LegacyPartitions": false
     },
     "MemoryCache": {
