--- a/Samples/Tutorials/2.SekibanEventSourcingBasics/SekibanEventSourcingBasics.Cosmos.Web/appsettings.Development.json
+++ b/Samples/Tutorials/2.SekibanEventSourcingBasics/SekibanEventSourcingBasics.Cosmos.Web/appsettings.Development.json
@@ -7,14 +7,9 @@
   },
   "Sekiban": {
     "Default": {
-      "AggregateEventCosmosDbContainer": "events",
-      "AggregateEventCosmosDbContainerDissolvable": "dissolvableevents",
       "BlobConnectionString": "[Set your blob connection string here. (not necessary for just running the sample)]",
-      "CosmosDbEndPointUrl": "[Set your CosmosDb endpoint url here.]",
-      "CosmosDbAuthorizationKey": "[Set your CosmosDb authorization key here.]",
-      "CosmosDbDatabase": "SekibanBasics",
-      "CosmosDbContainer": "items",
-      "CosmosDbContainerDissolvable": "dissolvableitems"
+      "CosmosDbConnectionString": "[Set your CosmosDb endpoint url here.]",
+      "CosmosDbDatabase": "SekibanBasics"
     }
   }
 }
