--- a/internalUsages/MultiTenant.WebApi/appsettings.json
+++ b/internalUsages/MultiTenant.WebApi/appsettings.json
@@ -7,21 +7,9 @@
   },
   "Sekiban": {
     "Default": {
-      "AggregateEventCosmosDbContainer": "events",
-      "AggregateEventCosmosDbContainerDissolvable": "dissolvableevents",
       "BlobConnectionString": "[your blob connection string]",
-      "CosmosDbEndPointUrl": "https://[YOUR COSMOS ENDPOINT URL].documents.azure.com:443/",
-      "CosmosDbAuthorizationKey": "[Set your cosmos db key here]",
-      "CosmosDbDatabase": "LocalTesting",
-      "CosmosDbContainer": "items",
-      "CosmosDbContainerDissolvable": "dissolvableitems",
-      "Aggregates": {
-        "UseHybridDefault": false,
-        "TakeSnapshotDefault": true,
-        "SnapshotFrequencyDefault": 80,
-        "SnapshotOffsetDefault": 15,
-        "UseUpdateMarker": false
-      }
+      "CosmosDbConnectionString": "[Set your cosmos db connection string]",
+      "CosmosDbDatabase": "LocalTesting"
     }
   },
   "AllowedHosts": "*"
