Fix documents and update versions

--- a/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Dynamo/appsettings.Development.json
+++ b/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Dynamo/appsettings.Development.json
@@ -4,5 +4,16 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Sekiban": {
+    "Default": {
+      "DynamoDbRegion": "us-east-1",
+      "AwsAccessKeyId": "[Set your dynamo db access id here]",
+      "AwsAccessKey": "[Set your dynamo db access key here]",
+      "DynamoDbItemsTable": "jjlt_items",
+      "DynamoDbEventsTable": "jjlt_events",
+      "S3BucketName": "jjlt-s3",
+      "S3Region": "us-west-1"
+    }
   }
 }
