--- a/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Dynamo/appsettings.json
+++ b/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Dynamo/appsettings.json
@@ -5,19 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Sekiban": {
-    "Default": {
-      "DynamoDbRegion": "us-east-1",
-      "AwsAccessKeyId": "[Set your dynamo db access id here]",
-      "AwsAccessKey": "[Set your dynamo db access key here]",
-      "DynamoDbItemsTable": "jjlt_items",
-      "DynamoDbEventsTable": "jjlt_events",
-      "DynamoDbItemsTableDissolvable": "jjlt_d_items",
-      "DynamoDbEventsTableDissolvable": "jjlt_d_events",
-      "S3BucketName": "jjlt-s3",
-      "S3Region": "us-west-1",
-      "MinimumNumberOfEventsToGenerateSnapshot": 30
-    }
-  }
+  "AllowedHosts": "*"
 }
