--- a/src/Sekiban.Core/Sekiban.Core.csproj
+++ b/src/Sekiban.Core/Sekiban.Core.csproj
@@ -6,17 +6,17 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Core</PackageId>
-        <Version>0.15.4</Version>
+        <Version>0.15.5</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Core</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.15.4</PackageVersion>
-        <Description>Supports CosmoDb ConnectionString</Description>
+        <PackageVersion>0.15.5</PackageVersion>
+        <Description>appsettins.json improvement</Description>
         <AssemblyName>Sekiban.Core</AssemblyName>
         <RootNamespace>Sekiban.Core</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageReadmeFile>src/README.md</PackageReadmeFile>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
