Update samples to new sekiban version

--- a/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Dynamo/appsettings.Development.json
+++ b/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Dynamo/appsettings.Development.json
@@ -7,11 +7,11 @@
   },
   "Sekiban": {
     "Default": {
-      "DynamoDbRegion": "us-east-1",
+      "DynamoDbRegion": "us-west-1",
       "AwsAccessKeyId": "[Set your dynamo db access id here]",
       "AwsAccessKey": "[Set your dynamo db access key here]",
-      "DynamoDbItemsTable": "jjlt_items",
-      "DynamoDbEventsTable": "jjlt_events",
+      "DynamoDbItemsTable": "bookborrowing_items",
+      "DynamoDbEventsTable": "bookborrowing_events",
       "S3BucketName": "jjlt-s3",
       "S3Region": "us-west-1"
     }
