--- a/tools/ConvertAndCopyCosmosItems/appsettings.json
+++ b/tools/ConvertAndCopyCosmosItems/appsettings.json
@@ -6,17 +6,19 @@
     }
   },
   "Sekiban": {
-    "Default": {
-      "BlobConnectionString": "[your blob connection string]",
-      "CosmosDbConnectionString": "[Set your cosmos db connection string here]",
-      "CosmosDbDatabase": "[Set your cosmos db database here]",
-      "LegacyPartitions": false
-    },
-    "ConvertDestination": {
-      "BlobConnectionString": "[your blob connection string]",
-      "CosmosDbConnectionString": "[Set your cosmos db connection string here]",
-      "CosmosDbDatabase": "[Set your cosmos db database here]",
-      "LegacyPartitions": false
+    "Contexts": {
+      "Default": {
+        "BlobConnectionString": "[your blob connection string]",
+        "CosmosDbConnectionString": "[Set your cosmos db connection string here]",
+        "CosmosDbDatabase": "[Set your cosmos db database here]",
+        "LegacyPartitions": false
+      },
+      "ConvertDestination": {
+        "BlobConnectionString": "[your blob connection string]",
+        "CosmosDbConnectionString": "[Set your cosmos db connection string here]",
+        "CosmosDbDatabase": "[Set your cosmos db database here]",
+        "LegacyPartitions": false
+      }
     },
     "MemoryCache": {
       "SingleProjection": {
